--- a/index.html
+++ b/index.html
@@ -90,10 +90,11 @@
 
             <div class="flex mt-5 justify-center">
                 <div class="w-9/12 rounded-[5px] bg-[#7F7F7F]">
-                    <div class="text-center text-white text-3xl py-4 font-bold font-mono">Appointment Booking Website for Doctor:(Currently Working)</div>
+                    <div class="text-center text-white text-3xl py-4 font-bold font-mono">Appointment Booking Website for Doctor</div>
                     <div class="bg-[#404040] text-white p-5">
                         <p>
-                            One of the client (Doctor) asked me to design online appointment website. so I am currently working on it.  
+                            One of the client (Doctor) asked me to design online appointment website.
+                            <p><i>Still Working..</i></p> 
                         </p>
 
                     </div>
